# astro-arxiv-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: jsaltbot.py  llm-slackbot.py
